# pandoc-api

./: LICENSE  pandoc-service.cabal  restart.sh  stack.yaml
app/: Main.hs
src/Pandoc/: Service.hs
src/Pandoc/Service/: API.hs  LensTH.hs  OptParse.hs  OptionLenses.hs  Types.hs
test/Pandoc/: ServiceSpec.hs
