name:                pandoc-service
version:             0.1.0.0
synopsis:            A pandoc microservice
description:         Please see README.md
homepage:            https://github.com/Corilla/pandoc-api#readme
license:             AllRightsReserved
license-file:        LICENSE
author:              Tom Sydney Kerckhove
maintainer:          syd.kerckhove@gmail.com
copyright:           Copyright: (c) 2016 Corilla
category:            Service
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     
      Pandoc.Service
    , Pandoc.Service.Types
    , Pandoc.Service.API
    , Pandoc.Service.OptParse
    , Pandoc.Service.LensTH
    , Pandoc.Service.OptionLenses
  build-depends:    
      base >= 4.7 && < 5
    , aeson >= 0.11 && < 0.12
    , bytestring >= 0.10 && < 0.11
    , containers >= 0.5 && < 0.6
    , directory >= 1.2.7 && < 1.3
    , filepath >= 1.4 && < 1.5
    , optparse-applicative >= 0.12 && < 0.13
    , microlens >= 0.4 && < 0.5
    , microlens-th >= 0.4 && < 0.5
    , pandoc >= 1.19 && < 1.20
    , process >= 1.4 && < 1.5
    , servant >= 0.8 && < 0.10
    , servant-server >= 0.8 && < 0.10
    , template-haskell >= 2.11 && < 2.12
    , text >= 1.2 && < 1.3
    , wai >= 3.2 && < 3.3
    , warp >= 3.2 && < 3.3
  default-language:    Haskell2010
  ghc-options:        
    -Wall

executable pandoc-service
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pandoc-service
  default-language:    Haskell2010
  ghc-options:         
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -Wall

test-suite pandoc-service-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:
    Pandoc.ServiceSpec
  build-depends:       
      base
    , HTTP >= 4000.3 && < 4000.4
    , directory
    , filepath
    , hspec >= 2.2 && < 2.3
    , pandoc-service
  default-language:    Haskell2010
  ghc-options:         
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -Wall

source-repository head
  type:     git
  location: https://github.com/Corilla/pandoc-api
